--- a/Halloapp/de.lproj/Localizable.stringsdict
+++ b/Halloapp/de.lproj/Localizable.stringsdict
@@ -207,9 +207,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d Unread Comment</string>
+			<string>%d ungelesener Kommentar</string>
 			<key>other</key>
-			<string>%d Unread Comments</string>
+			<string>%d ungelesene Kommentare</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
