--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -250,8 +250,11 @@
 /* No comment provided by engineer. */
 "Cancel" = "Cancelar";
 
-/* Text shown at the top of the chat screen informing the user that the contact is blocked */
+/* Text shown in the chat interface informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "El contacto está bloqueado, toca para desbloquear";
+
+/* Title of the bottom sheet shown in the chat screen of a contact that is blocked. The bottom sheet contains an unblock button. */
+"chat.contact.is.blocked.title.label" = "El contacto está bloqueado, no recibirás ningún mensaje hasta que lo desbloquees.";
 
 /* Label for creating a new group */
 "chat.create.new.group" = "Crear nuevo grupo";
@@ -270,6 +273,9 @@
 
 /* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
 "chat.event.security.keys.changed" = "La clave de seguridad con %@ ha sido cambiada";
+
+/* Chat entry that can be tapped to add the contact to address book */
+"chat.event.tap.to.add.contact" = "Toca para agregar a  %@ a tu libreta de contactos";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ se unió al grupo con el enlace de invitación";
@@ -370,11 +376,11 @@
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "escribiendo...";
 
+/* Text shown in the chat interface informing the user that the contact is unblocked */
+"chat.unblocked.contact.label" = "Desbloqueaste a este contacto";
+
 /* Text shown when user is about to remove the chat */
 "chats.list.remove.message" = "Al eliminar este chat estarás borrando toda la historia del chat y el contenido de tu dispositivo.";
-
-/* Button revealed when user swipes on their comment. */
-"comment.delete" = "Eliminar";
 
 /* Title for the button in comment deletion confirmation prompt. */
 "comment.delete.action" = "Eliminar comentario";
@@ -393,18 +399,6 @@
 
 /* Title for the button displayed under feed post comment. Verb. */
 "comment.reply" = "Responder";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to user's own feed post comment. */
-"comment.replying.myself" = "Respondiéndome a mí mismo";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to someone's feed post comment. */
-"comment.replying.someone" = "Respondiendo a %@";
-
-/* Title for the button in comment resend confirmation prompt. */
-"comment.resend.action" = "Reenviar";
-
-/* Confirmation prompt for when resending comment that previously failed to send. */
-"comment.resend.confirmation" = "¿Reenviar el comentario?";
 
 /* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Añadir un comentario";
@@ -1000,6 +994,10 @@
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.camera.access.request" = "HalloApp no tiene acceso a tu cámara. Para permitir acceso, toca configuración y enciende la cámara";
 
+/* Label indicating that the camera is in photo mode
+   Label indicating that the camera is in video mode */
+"media.camera.mode.photo" = "VIDEO";
+
 /* Confirmation prompt in media composer. */
 "media.discard.confirmation" = "¿Te gustaría descartar lo que has editado?";
 
@@ -1203,9 +1201,6 @@
 
 /* Title of the button that opens the camera. */
 "open.camera" = "Abrir cámara";
-
-/* Text that indicates an open action. */
-"open.title" = "Abre";
 
 /* button to launch photo and video library */
 "photo.and.video.library" = "Biblioteca de fotos y videos";
@@ -1746,6 +1741,9 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "VIDEO";
+
+/* Text that indicates a view action. */
+"view.title" = "Ver";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Eliminar publicación";
