--- a/Halloapp/es.lproj/Localizable.stringsdict
+++ b/Halloapp/es.lproj/Localizable.stringsdict
@@ -207,9 +207,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d Unread Comment</string>
+			<string>%d Comentario sin leer</string>
 			<key>other</key>
-			<string>%d Unread Comments</string>
+			<string>%d Comentarios sin leer</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
