--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -250,8 +250,11 @@
 /* No comment provided by engineer. */
 "Cancel" = "لغو";
 
-/* Text shown at the top of the chat screen informing the user that the contact is blocked */
+/* Text shown in the chat interface informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "مخاطب مسدود شد، برای رفع مسدودیت کلیک کنید";
+
+/* Title of the bottom sheet shown in the chat screen of a contact that is blocked. The bottom sheet contains an unblock button. */
+"chat.contact.is.blocked.title.label" = "مخاطب مسدود شد، شما از ایشان پیامی دریافت نخواهید کرد تا زمانی که ایشان را نامسدود کنید.";
 
 /* Label for creating a new group */
 "chat.create.new.group" = "ایجاد گروه جدید";
@@ -270,6 +273,9 @@
 
 /* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
 "chat.event.security.keys.changed" = "کد امنیتی با @% تغییر کرده است";
+
+/* Chat entry that can be tapped to add the contact to address book */
+"chat.event.tap.to.add.contact" = "برای اضافه کردن @% به گروهتان کلیک کنید";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ از طریق لینک به گروه پیوست";
@@ -370,11 +376,11 @@
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "در حال نوشتن...";
 
+/* Text shown in the chat interface informing the user that the contact is unblocked */
+"chat.unblocked.contact.label" = "شما این مخاطب را رفع مسدودیت کردید";
+
 /* Text shown when user is about to remove the chat */
 "chats.list.remove.message" = "با حذف این گفتگو تاریخچه گفتگو و محتوای آن را از دستگاه خود پاک خواهید کرد.";
-
-/* Button revealed when user swipes on their comment. */
-"comment.delete" = "حذف";
 
 /* Title for the button in comment deletion confirmation prompt. */
 "comment.delete.action" = "حذف نظر";
@@ -393,18 +399,6 @@
 
 /* Title for the button displayed under feed post comment. Verb. */
 "comment.reply" = "پاسخ";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to user's own feed post comment. */
-"comment.replying.myself" = "پاسخ به خود";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to someone's feed post comment. */
-"comment.replying.someone" = "پاسخ به %@";
-
-/* Title for the button in comment resend confirmation prompt. */
-"comment.resend.action" = "ارسال دوباره";
-
-/* Confirmation prompt for when resending comment that previously failed to send. */
-"comment.resend.confirmation" = "مطمئنید میخواهید دوباره ارسال کنید؟";
 
 /* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "نوشتن نظر";
@@ -1211,9 +1205,6 @@
 /* Title of the button that opens the camera. */
 "open.camera" = "باز کردن دوربین";
 
-/* Text that indicates an open action. */
-"open.title" = "باز کردن";
-
 /* button to launch photo and video library */
 "photo.and.video.library" = "آلبوم عکس و ویدیو";
 
@@ -1753,6 +1744,9 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "ویدیو";
+
+/* Text that indicates a view action. */
+"view.title" = "مشاهده کردن";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "حذف پست";
