--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -250,8 +250,11 @@
 /* No comment provided by engineer. */
 "Cancel" = "Annuleren";
 
-/* Text shown at the top of the chat screen informing the user that the contact is blocked */
-"chat.blocked.contact.label" = "Contact is geblokkeerd, tik om te deblokkeren";
+/* Text shown in the chat interface informing the user that the contact is blocked */
+"chat.blocked.contact.label" = "Je hebt dit contact geblokkeerd";
+
+/* Title of the bottom sheet shown in the chat screen of a contact that is blocked. The bottom sheet contains an unblock button. */
+"chat.contact.is.blocked.title.label" = "Contact is geblokkeerd, je ontvangt geen berichten totdat je ze deblokkeert.";
 
 /* Label for creating a new group */
 "chat.create.new.group" = "Nieuwe Groep Aanmaken";
@@ -270,6 +273,9 @@
 
 /* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
 "chat.event.security.keys.changed" = "Beveiligingssleutels met %@ zijn gewijzigd";
+
+/* Chat entry that can be tapped to add the contact to address book */
+"chat.event.tap.to.add.contact" = "Tik om %@ toe te voegen aan je adresboek";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ neemt deel aan de groep via een uitnodigingslink";
@@ -370,11 +376,11 @@
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "aan het typen...";
 
+/* Text shown in the chat interface informing the user that the contact is unblocked */
+"chat.unblocked.contact.label" = "Je hebt dit contact gedeblokkeerd";
+
 /* Text shown when user is about to remove the chat */
 "chats.list.remove.message" = "Als je deze chat verwijderd, verwijder je de chatgeschiedenis en inhoud ervan van je apparaat.";
-
-/* Button revealed when user swipes on their comment. */
-"comment.delete" = "Verwijderen";
 
 /* Title for the button in comment deletion confirmation prompt. */
 "comment.delete.action" = "Reactie Verwijderen";
@@ -393,18 +399,6 @@
 
 /* Title for the button displayed under feed post comment. Verb. */
 "comment.reply" = "Beantwoorden";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to user's own feed post comment. */
-"comment.replying.myself" = "Antwoord op mezelf";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to someone's feed post comment. */
-"comment.replying.someone" = "Antwoord op %@";
-
-/* Title for the button in comment resend confirmation prompt. */
-"comment.resend.action" = "Opnieuw verzenden";
-
-/* Confirmation prompt for when resending comment that previously failed to send. */
-"comment.resend.confirmation" = "Reactie Opnieuw Verzenden?";
 
 /* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Nieuwe Reactie";
@@ -1211,9 +1205,6 @@
 /* Title of the button that opens the camera. */
 "open.camera" = "Camera Openen";
 
-/* Text that indicates an open action. */
-"open.title" = "Openen";
-
 /* button to launch photo and video library */
 "photo.and.video.library" = "Foto- & Videobibliotheek";
 
@@ -1753,6 +1744,9 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "VIDEO";
+
+/* Text that indicates a view action. */
+"view.title" = "Bekijken";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Post Verwijderen";
