--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -250,8 +250,11 @@
 /* No comment provided by engineer. */
 "Cancel" = "İptal et";
 
-/* Text shown at the top of the chat screen informing the user that the contact is blocked */
+/* Text shown in the chat interface informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "Bu kişi engelli, engeli kaldırmak için dokun";
+
+/* Title of the bottom sheet shown in the chat screen of a contact that is blocked. The bottom sheet contains an unblock button. */
+"chat.contact.is.blocked.title.label" = "Bu kişi engellendi; engelini kaldırmadığın sürece ondan mesaj alamazsın.";
 
 /* Label for creating a new group */
 "chat.create.new.group" = "Yeni grup oluştur";
@@ -270,6 +273,9 @@
 
 /* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
 "chat.event.security.keys.changed" = "%@ ile güvenlik anahtarları değiştirildi";
+
+/* Chat entry that can be tapped to add the contact to address book */
+"chat.event.tap.to.add.contact" = "%@ kişisini rehberine eklemek için dokun";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@, Grup Davet İlişimi ile gruba katıldı";
@@ -370,11 +376,11 @@
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "yazıyor...";
 
+/* Text shown in the chat interface informing the user that the contact is unblocked */
+"chat.unblocked.contact.label" = "Bu kişinin engelini kaldırdın";
+
 /* Text shown when user is about to remove the chat */
 "chats.list.remove.message" = "Bu sohbeti silerek sohbet geçmişini ve içeriğini cihazından temizleyeceksin.";
-
-/* Button revealed when user swipes on their comment. */
-"comment.delete" = "Sil";
 
 /* Title for the button in comment deletion confirmation prompt. */
 "comment.delete.action" = "Yorumu sil";
@@ -393,18 +399,6 @@
 
 /* Title for the button displayed under feed post comment. Verb. */
 "comment.reply" = "Yanıtla";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to user's own feed post comment. */
-"comment.replying.myself" = "Kendini yanıtla";
-
-/* Text in the reply panel about keyboard. Reply refers to replying to someone's feed post comment. */
-"comment.replying.someone" = "%@ kişisine cevap veriliyor";
-
-/* Title for the button in comment resend confirmation prompt. */
-"comment.resend.action" = "Tekrar gönder";
-
-/* Confirmation prompt for when resending comment that previously failed to send. */
-"comment.resend.confirmation" = "Yorum tekrar gönderilsin mi?";
 
 /* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Yorum ekle";
@@ -997,6 +991,10 @@
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.camera.access.request" = "HalloApp'in kamerana erişimi yok. Erişimi etkinleştirmek için Ayarlar'a dokun ve Kamera'yı aç.";
 
+/* Label indicating that the camera is in photo mode
+   Label indicating that the camera is in video mode */
+"media.camera.mode.photo" = "VİDEO";
+
 /* Confirmation prompt in media composer. */
 "media.discard.confirmation" = "Düzenlemelerini iptal etmek istiyor musun?";
 
@@ -1197,9 +1195,6 @@
 
 /* Title of the button that opens the camera. */
 "open.camera" = "Kamerayı aç";
-
-/* Text that indicates an open action. */
-"open.title" = "Aç";
 
 /* button to launch photo and video library */
 "photo.and.video.library" = "Fotoğraf & Video Galerisi";
@@ -1740,6 +1735,9 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "VİDEO";
+
+/* Text that indicates a view action. */
+"view.title" = "Gör";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Gönderiyi sil";
